# Chito

./: .gitignore  README.md  pyproject.toml
samples/: async_gsm8k_grpo.py  gsm8k_dapo.py  gsm8k_drgrpo.py  gsm8k_gmpo.py  gsm8k_grpo.py  train_grpo.py
src/chito/: __init__.py  _vllm_ipc.py  engine.py  errors.py  gmpo.py  models.py  protocols.py  ray_service.py  vllm_backend.py  workflows.py
tests/: __init__.py  fakes.py  test_engine.py  test_vllm_backend.py
tests/integration/: test_vllm_smoke.py
