[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "chito"
version = "0.1.0"
description = "Asynchronous rollout coordination for reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]
vllm = ["vllm>=0.25,<0.26", "ray>=2.48,<3"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: opt-in tests that load external runtimes and models"]

[tool.setuptools.packages.find]
where = ["src"]
